@@ -5,7 +5,6 @@ import com.google.common.collect.Iterables;
 import com.selesse.processes.ProcessRunner;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GetAllAppsFromRegistry {
     private static final List<String> ALL_APPS_FROM_REGISTRY = List.of(
@@ -18,6 +17,6 @@ public class GetAllAppsFromRegistry {
         return perLineOutput.stream().map(
                 // e.g. HKEY_CURRENT_USER\Software\Valve\Steam\apps\1005300 => 1005300
                 line -> Long.parseLong(Iterables.getLast(Splitter.on("\\").splitToList(line)))
-        ).collect(Collectors.toList());
+        ).toList();
     }
 }
